# slake

./: .editorconfig  CMakeLists.txt  Hakefile  README.md  Slaking
docs/: README_zh-cn.md
include/: hakedef.h  slakedef.h  util.h
include/util/: list.h  object.h
scripts/: utils.slk
src/: exec.c  exec.h  hake.l  hake.y  hakedef.c  main.c  slake.l  slake.y  slakedef.c  task.c  task.h  util.c
src/util/: list.c
